--- a/Views/Home/Create.cshtml
+++ b/Views/Home/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create User";
 }
 
-<h1>Add New Product</h1>
+<h1>Crea un producte nou</h1>
 
 <div class="row">
     <div class="col-md-6">
@@ -12,25 +12,25 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group mb-3">
-                <label asp-for="Name" class="control-label"></label>
+                <label class="control-label">Nom</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
 
             <div class="form-group mb-3">
-                <label asp-for="Description" class="control-label"></label>
+                <label  class="control-label">Descripció</label>
                 <textarea asp-for="Description" class="form-control" rows="3"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
 
             <div class="form-group mb-3">
-                <label asp-for="Quantity" class="control-label"></label>
+                <label class="control-label">Quantitat</label>
                 <input asp-for="Quantity" class="form-control" />
                 <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
 
             <div class="form-group mb-3">
-                <label asp-for="Price" class="control-label"></label>
+                <label class="control-label">Preu (€)</label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
